    - Check for presence of s6_addr16 and s6_addr32 fields in in6_addr
      via autoconf.  Should fix compile on solaris.
    - When the DANGEROUS_VERSION controller status event told us we're
      running an obsolete version, it used the string "OLD" to describe
      it. Yet the "getinfo" interface used the string "OBSOLETE". Now use
      "OBSOLETE" in both cases.

  o Minor features:
    - On USR1, when dmalloc is in use, log the top 10 memory
      consumers. (We already do this on HUP.)
    - Authorities and caches fetch the v2 networkstatus documents
      less often, now that v3 is encouraged.
    - Add a new config option BridgeRelay that specifies you want to
      be a bridge relay. Right now the only difference is that it makes
      you answer begin_dir requests, and it makes you cache dir info,
      even if your DirPort isn't on.
    - Add "GETINFO/desc-annotations/id/<OR digest>" so controllers can
      ask about source, timestamp of arrival, purpose, etc. We need
      something like this to help Vidalia not do GeoIP lookups on bridge
      addresses.
    - Allow multiple HashedControlPassword config lines, to support
      multiple controller passwords.
    - New config options AuthDirBadDir and AuthDirListBadDirs for
      authorities to mark certain relays as "bad directories" in the
      networkstatus documents. Also supports the "!baddir" directive in
      the approved-routers file.


Changes in version 0.2.0.12-alpha - 2007-11-16
  This twelfth development snapshot fixes some more build problems as
  well as a few minor bugs.

  o Compile fixes:
    - Make it build on OpenBSD again. Patch from tup.
    - Substitute BINDIR and LOCALSTATEDIR in scripts. Fixes
      package-building for Red Hat, OS X, etc.

  o Minor bugfixes (on 0.1.2.x):
    - Changing the ExitPolicyRejectPrivate setting should cause us to
      rebuild our server descriptor.

  o Minor bugfixes (on 0.2.0.x):